[tool.poetry]
name = "data-engineer-code-challenge-ignacio"
version = "0.1.0"
description = ""
authors = ["Ignacio Betegón <i.betegon@going-public.edu>"]
packages = [
    {include="scripts"}
]

[tool.poetry.scripts]
alphavantage = "scripts.alphavantage:alphavantage"

[tool.poetry.dependencies]
python = "^3.8"
asyncclick = "^8.0.1"
anyio = "^3.2.1"
aiohttp = "^3.7.4"
loguru = "^0.5.3"
black = "^21.6b0"
flake8 = "^3.9.2"
isort = "^5.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
